# otus-c

./: .gitignore  CMakeLists.txt  Makefile  README.md  create_hw_from_skel.sh
homework3/: CMakeLists.txt  Makefile  encode.c  encode.h  homework.c  test.py
homework4/: CMakeLists.txt  homework.c  test.py
homework8/: 1.1  CMakeLists.txt  Makefile  homework.c  htable.c  htable.h  htable_test.c  test.py
homework8/test_files/: notes.txt
homework9/: CMakeLists.txt  homework.c  homework.h  test.py
hwskel/: Makefile  TemplMakefile
